--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 
-main{
+.pokedex_container{
 	padding: 16px;
 }
 
@@ -21,7 +21,7 @@ a {
 }
 
 body {
-	display: flex;
+	
 	align-items: center;
 	justify-content: center;
 	min-height: 70vh;
@@ -30,6 +30,12 @@ body {
 	background-color: #202733;
 	color: #cee3e9;
 	font-family: 'Manrope', sans-serif;
+}
+
+.liststyle {
+	display: flex;
+	justify-content: center;
+	padding: 16px;
 }
 
 .cardsContainer {
@@ -42,6 +48,7 @@ body {
 	overflow-y: scroll;
     max-height: -webkit-fill-available;
 	height: 65vh;
+	padding-top: 12px;
 }
 
 .cardBg{
@@ -50,8 +57,7 @@ body {
 }
 .pkmnImage{
 	background-size: contain; /* Puedes ajustar esto según sea necesario */
-  
-  position: absolute;
+    position: absolute;
  
   
 }
@@ -60,7 +66,7 @@ body {
 	color: #666;
     font-family: system-ui;
     font-size: 14px;
-    margin-left: -60px;
+    margin-left: -50px;
 	position: absolute;
 	top: 1px;
 }
@@ -118,9 +124,9 @@ body {
 	justify-content: space-between;
 }
 
-.header img{
+/*.header img{
 	margin-right: -80px;
-}
+}*/
 /* SELECT*/
 .selectStyle{
 	width: 100%;
@@ -285,6 +291,7 @@ justify-content: center;
 align-items: center;
 border-radius: 8px;
 background: var(--grayscale-white, #FFF);
+transition: transform 0.3s ease;
 
 /* Drop Shadow/2 dp */
 box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.20);
@@ -305,5 +312,165 @@ box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.20);
 
 .card:hover  {
     background: #F4F4F4;
-    
+    cursor: pointer;
+	transform: scale(1.05); 
+	box-shadow: 0px 0px 4px 3px hsl(300.43deg 100% 50% / 44%);
+	
 }
+
+.hidden{
+	display: none;
+
+}
+
+.arrow-back{
+	cursor: pointer;
+}
+
+.arrow-back:hover{
+	cursor: pointer;
+}
+
+.image-size{
+	width: 25vh;
+}
+
+.pkmn-container{
+	display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.type{
+	justify-content: center;
+    display: flex;
+}
+
+.info-container{
+background-color: rgba(32, 39, 51, 0.80);
+border: 1px solid rgba(255, 255, 255, 0.5); 
+border-top-left-radius: 30px;
+border-top-right-radius: 30px;
+box-sizing: border-box;
+width: 100%;
+top: 400px;
+position: fixed;
+bottom: 0;
+overflow-y: scroll;
+fill: rgba(32, 39, 51, 0.80);
+filter: drop-shadow(0 0 5.100000000000023px rgba(255,255,255,.2))
+}
+
+.description{
+	justify-content: center;
+    display: flex;
+	justify-content:start;
+	padding-top: 15px;
+
+}
+
+.marg-left20{
+margin-left: 20px;
+}
+
+.marg-left80{
+	margin-left: 80px;
+}
+
+
+
+.rounded{
+	border: 1px solid white;
+    padding: 5px;
+    border-radius: 10px;
+	display: inline-flex;
+	padding: 3px 8px;
+	align-items: center;
+	gap: 6px;
+}
+
+.text{
+	font-size: small;
+    padding: 16px;
+    font-family: system-ui;
+
+}
+
+.pokeMini{
+	width: 50px;
+}
+
+.textMini{
+	font-family: system-ui;
+    font-size: 12px;
+}
+
+.minisContainer{
+	padding-top: 15px;
+	padding-bottom: 15px;
+	display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.statsStyle{
+	font-family: system-ui;
+    font-size: 12px;
+	padding: 20px;
+	display: grid;
+    justify-items: end;
+    justify-content: start;
+
+}
+
+.statsStyle div   {
+	display: flex;
+	align-items: center; 
+  }
+
+.statsStyle div span {
+	margin-right: 20px;
+	
+  }
+
+  .prog-bar{
+	width: 100px;
+	height: 4px;
+	background-color: rgb(255, 255, 255);
+	border-radius: 4px;
+	filter: drop-shadow(0 0 5.100000000000023px rgba(34, 255, 0, 0.655));
+
+  }
+
+  .weeknesStyle{
+	font-family: system-ui;
+    font-size: 12px;
+	padding: 20px;
+	
+
+}
+
+.flex{
+	display: flex;
+	flex-direction: row;
+}
+
+.flexLine{
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.weekness{
+	display: flex;
+    width: 292px;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 0px;
+    flex-wrap: wrap;
+}
+  
